# Obbligato

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  biicode.conf  common.cmake  format  project.mk
docs-dev/: Doxyfile
include/: Obbligato.hpp
include/Obbligato/: Action.hpp  Allocator.hpp  Allocator_Base.hpp  Allocator_Heap.hpp  Allocator_Simple.hpp  Allocator_SimpleStatic.hpp  Atomic.hpp  Choice.hpp  Concept.hpp  Config.hpp  Config_Option.hpp  Config_OptionBase.hpp  Config_OptionGroup.hpp  Config_OptionGroups.hpp  Config_OptionGroupsApple.hpp  Config_OptionGroupsIOS.hpp  Config_OptionGroupsMacOSX.hpp  Config_OptionGroupsWin32.hpp  Config_RegistryWin32.hpp  Constants.hpp  DSP.hpp  DSP_Biquad.hpp  DSP_Gain.hpp  DSP_Oscillator.hpp  DSP_PluginChain.hpp  Deleter.hpp  Endian.hpp  Form.hpp  Function.hpp  FunctionList.hpp  IEEE.hpp  IEEE_Types.hpp  IOStream.hpp  IOStream_Fmt.hpp  IOStream_InputState.hpp  IOStream_OutputState.hpp  LexicalCast.hpp  LinkedPtr.hpp  Logger.hpp  LoggerNull.hpp  (+114 more)
src/: Action.cpp  Allocator.cpp  Allocator_Base.cpp  Allocator_Heap.cpp  Allocator_Simple.cpp  Allocator_SimpleStatic.cpp  Atomic.cpp  Concept.cpp  Config.cpp  Config_Option.cpp  Config_OptionBase.cpp  Config_OptionGroup.cpp  Config_OptionGroups.cpp  Config_OptionGroupsApple.cpp  Config_OptionGroupsIOS.cpp  Config_OptionGroupsMacOSX.cpp  Config_OptionGroupsWin32.cpp  Config_RegistryWin32.cpp  Constants.cpp  DSP.cpp  DSP_Biquad.cpp  DSP_Gain.cpp  DSP_Oscillator.cpp  DSP_PluginChain.cpp  Deleter.cpp  Endian.cpp  Form.cpp  Function.cpp  FunctionList.cpp  IEEE.cpp  IEEE_Types.cpp  IOStream.cpp  IOStream_Fmt.cpp  IOStream_InputState.cpp  IOStream_OutputState.cpp  LexicalCast.cpp  LinkedPtr.cpp  Logger.cpp  LoggerStream.cpp  LoggerSyslog.cpp  (+110 more)
tests/: TestObbligato.cpp
